@@ -140,23 +140,34 @@ trunk_file_size = 64MB
 
 # if create trunk file advancely
 # default value is false
+# since V3.06
 trunk_create_file_advance = false
 
 # the time base to create trunk file
 # the time format: HH:MM
 # default value is 02:00
+# since V3.06
 trunk_create_file_time_base = 02:00
 
 # the interval of create trunk file, unit: second
 # default value is 38400 (one day)
+# since V3.06
 trunk_create_file_interval = 86400
 
 # the threshold to create trunk file
 # when the free trunk file size less than the threshold, will create 
 # the trunk files
 # default value is 0
+# since V3.06
 trunk_create_file_space_threshold = 20G
 
+# if check trunk space occupying when loading trunk free spaces
+# the occupied spaces will be ignored
+# default value is false
+# since V3.09
+# NOTICE: set this parameter to true will slow the loading of trunk spaces 
+# when startup. you should set this parameter to true when neccessary.
+trunk_init_check_occupying = false
 
 # HTTP settings
 http.disabled=false
