@@ -93,6 +93,8 @@ int storage_get_params_from_tracker()
 			"trunk_create_file_space_threshold", \
 			&iniContext, 0);
 
+	g_trunk_init_check_occupying = iniGetBoolValue(NULL, \
+			"trunk_init_check_occupying", &iniContext, false);
 	iniFreeContext(&iniContext);
 
 	if (use_trunk_file && !g_if_use_trunk_file)
@@ -115,7 +117,8 @@ int storage_get_params_from_tracker()
 		"trunk_create_file_advance=%d, " \
 		"trunk_create_file_time_base=%02d:%02d, " \
 		"trunk_create_file_interval=%d, " \
-		"trunk_create_file_space_threshold=%d GB", \
+		"trunk_create_file_space_threshold=%d GB, " \
+		"trunk_init_check_occupying=%d", \
 		__LINE__, g_storage_ip_changed_auto_adjust, \
 		g_store_path_mode, g_storage_reserved_mb, \
 		g_if_use_trunk_file, g_slot_min_size, \
@@ -126,7 +129,7 @@ int storage_get_params_from_tracker()
 		g_trunk_create_file_time_base.minute, \
 		g_trunk_create_file_interval, \
 		(int)(g_trunk_create_file_space_threshold / \
-		(FDFS_ONE_MB * 1024)));
+		(FDFS_ONE_MB * 1024)), g_trunk_init_check_occupying);
 
 	return 0;
 }
