@@ -613,7 +613,8 @@ static int tracker_deal_parameter_req(struct fast_task_info *pTask)
 		"trunk_create_file_advance=%d\n" \
 		"trunk_create_file_time_base=%02d:%02d\n" \
 		"trunk_create_file_interval=%d\n" \
-		"trunk_create_file_space_threshold="INT64_PRINTF_FORMAT"\n", \
+		"trunk_create_file_space_threshold="INT64_PRINTF_FORMAT"\n" \
+		"trunk_init_check_occupying=%d\n", \
 		g_storage_ip_changed_auto_adjust, \
 		g_storage_sync_file_max_delay, \
 		g_groups.store_path, \
@@ -626,7 +627,8 @@ static int tracker_deal_parameter_req(struct fast_task_info *pTask)
 		g_trunk_create_file_time_base.hour, \
 		g_trunk_create_file_time_base.minute, \
 		g_trunk_create_file_interval, \
-		g_trunk_create_file_space_threshold);
+		g_trunk_create_file_space_threshold, \
+		g_trunk_init_check_occupying);
 
 	return 0;
 }
